Add CheckAntoraVersionPlugin